Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson
Josh Green
Mario Lang
Arnold Krille
Jan Engelhardt
Adrian Knoth
David Garcia Garzon
Valerio Pilo
Chris Caudle
John Emmas

---------------------------
  Jackdmp changes log
---------------------------

2011-11-04 Stephane Letz  <letz@grame.fr>

	* Fix jack_set_port_name API.

2011-11-03 Stephane Letz  <letz@grame.fr>

	* Add missing jack_client_get_uuid API.
	* John Emmas Windows server launching patch (1).

2011-10-28 Stephane Letz  <letz@grame.fr>

	* John Emmas POST_PACKED_STRUCTURE patch.

2011-10-27 Stephane Letz  <letz@grame.fr>

	* Gabriel Beddingfield patch (r4541) reverted.  

2011-10-10 Stephane Letz  <letz@grame.fr>

	* John Emmas patch for DSP CPU computation.

2011-09-27 Stephane Letz  <letz@grame.fr>

	* Gabriel Beddingfield patch for ALSA driver: error when source is non-native byte-order float.

2011-08-31 Stephane Letz  <letz@grame.fr>

	* Correct Start/Stop for Control API.

2011-08-30 Stephane Letz  <letz@grame.fr>

	* Check driver type in jackdmp.cpp. 

2011-08-28 Stephane Letz  <letz@grame.fr>

	* Correct JackBasePosixMutex::Trylock.
	* Correct JackMessageBuffer::Execute.

2011-08-26 Stephane Letz  <letz@grame.fr>

	* More robust code in synchronization primitives and in JackMessageBuffer.
	* Non blocking notifications in JackEngine::NotifyAddClient and JackEngine::NotifyRemoveClient.
	* More robust Control API implementation.
	* Add jackctl_driver_get_type in Control API.
	* Singleton behaviour for JackCoreMidiDriver and JackWinMMEDriver.

2011-07-29 Stephane Letz  <letz@grame.fr>

	* New JackTimedDriver class to be used by JackDummyDriver, JackNetDriver and JackNetOneDriver classes.

2011-07-28 Stephane Letz  <letz@grame.fr>

	* Enable explicit channel mapping in CoreAudio driver.

2011-07-25 Stephane Letz  <letz@grame.fr>
